--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
   font-weight: 400;
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #FFCCBC;
+  background-color: #F4F0EB;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -34,32 +34,26 @@ body {
 }
 
 h1 {
-  font-size: 3.2em;
   line-height: 1.1;
+  font-size: 55px;
 }
 
 button {
-  background: #d9c8ba;
+  background: #D8C7B9;
   border: none;
   padding: 12px 28px;
   border-radius: 10px;
   font-size: 16px;
-  color: #5e4b56;
+  color: #7A7A7A;
   font-family: 'Mulish', sans-serif;
   box-shadow: 0 6px 18px rgba(0, 0, 0, 0.1);
   cursor: pointer;
   transition: 0.3s;
 }
 
-
-h1, h2 {
-  font-family: 'Playfair Display', serif;
-  color: #b48ead;
-  letter-spacing: 1px;
-}
-
 h1, h2, h3 {
-  font-family: 'Playfair Display', serif;
+  font-family: 'Cormorant Garamond', serif;
+  letter-spacing: 1px;
 }
 
 p, a, span {
