--- a/src/styles/RegalaTova.module.css
+++ b/src/styles/RegalaTova.module.css
@@ -21,23 +21,40 @@
 .form{
     margin-top: 100px;
     display: flex;
-    align-items: left;
-    justify-content: left;
+    align-items: center;
+    justify-content: center;
     padding: 2rem;
 }
 
 form {
-    width: 100%;
-    max-width: 500px;
-    display: flex;
-    flex-direction: column;
-    gap: 20px; 
+    width: 600px;
+
+   
     background-color: #fef9f5;
     padding: 2rem;
     border-radius: 10px;
     box-shadow: 0px 4px 20px rgb(91, 90, 90);;
+
+    display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 40px; /* espacio entre el formulario y la imagen */
+  padding: 40px;
+  flex-wrap: wrap;
 }
 
 label{
     margin-right: 15px;
+}
+
+.img{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+img{
+    max-width: 100%;
+    height: auto;
+    border-radius: 10px;
 }
