--- a/src/styles/NavBar.module.css
+++ b/src/styles/NavBar.module.css
@@ -8,10 +8,11 @@
     justify-content: center;
     position: absolute;
     padding-top: 40px;
+
 }
 
 h1{
-    font-size: 65px;
+    font-size: 90px;
     position: absolute;
     color: #6c6c6c;;
     top: 40%;  
@@ -34,12 +35,10 @@ h2{
 }
 
 
-
 .navbar a , h3 {
-    color: #6c6c6c;
-    font-size: 1.3rem; 
+    color: #606060;
+    font-size: 1.1rem; 
     text-decoration: none;
-    font-weight: bold;
 }
 
 .banner{
