--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,6 @@
   line-height: 1.5;
   font-weight: 400;
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
   background-color: #F4F0EB;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -20,17 +19,6 @@ a {
 a:hover {
   color: #785f74;
 
-}
-
-body {
-  margin: 0;
-  min-width: 320px;
-  min-height: 100vh;
-  font-family: 'Lora', serif;
-  font-size: 16px;
-  color: #333;
-  background-color:#f7ede5;
-  line-height: 1.6;
 }
 
 h1 {
@@ -57,8 +45,9 @@ h1, h2{
   
 }
 
-p, a, span {
+p, a, span,h3 {
   font-family: 'Open Sans', sans-serif;
+  color: #7d7b7c
 }
 
 
