--- a/src/styles/RegalaTova.module.css
+++ b/src/styles/RegalaTova.module.css
@@ -1,3 +1,14 @@
+.regala {
+    background-image: linear-gradient(rgba(246, 233, 217, 0.6), rgba(248, 230, 210, 0.6)), 
+    url('https://img.freepik.com/foto-gratis/flay-lay-regalo-bodas_23-2148480743.jpg?uid=R195384068&ga=GA1.1.1117630890.1730399903&semt=ais_hybrid&w=740');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 15cm;
+    width: 100%;
+}
+
+
 .titulo{
     font-size: 65px;
     position: absolute;
@@ -15,7 +26,7 @@
     font-size: 25px;
     color: rgb(91, 90, 90);
     text-align: center;
-    margin-top: 600px;
+    margin-top: 100px;
 }
 
 .form{
@@ -28,33 +39,18 @@
 
 form {
     width: 600px;
-
-   
     background-color: #fef9f5;
     padding: 2rem;
     border-radius: 10px;
     box-shadow: 0px 4px 20px rgb(91, 90, 90);;
-
     display: flex;
-  justify-content: center;
-  align-items: flex-start;
-  gap: 40px; /* espacio entre el formulario y la imagen */
-  padding: 40px;
-  flex-wrap: wrap;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 40px; /* espacio entre el formulario y la imagen */
+    padding: 40px;
+    flex-wrap: wrap;
 }
 
 label{
     margin-right: 15px;
-}
-
-.img{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-img{
-    max-width: 100%;
-    height: auto;
-    border-radius: 10px;
 }
