--- a/src/styles/Contacto.module.css
+++ b/src/styles/Contacto.module.css
@@ -1,4 +1,4 @@
-.contacto{
+.titulo{
     background-image: linear-gradient(rgba(246, 233, 217, 0.6), rgba(248, 230, 210, 0.6)), 
     url('https://img.freepik.com/foto-gratis/concepto-spa-masaje-mujer_23-2147817020.jpg?uid=R195384068&ga=GA1.1.1117630890.1730399903&semt=ais_hybrid&w=740');
     background-position: center;
@@ -8,13 +8,8 @@
     width: 100%;
 }
 
-.form{
-    display: flex;
-    margin-top: 100px;
-}
-
 /*contenedor de los datos y el map*/
-.contacto2{
+.contacto{
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
@@ -52,3 +47,52 @@
     font-size: 22px;
     color: #7d7b7c
 }
+
+
+.form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 50px;
+    padding: 2rem;
+    width: 100%;
+    max-width: 600px;
+    margin: 0 auto;
+}
+
+.form button {
+    background: #D8C7B9;
+    height: 40px;
+    border: none;
+    padding: 12px;
+    border-radius: 10px;
+    font-size: 16px;
+    color: #7A7A7A;
+    box-shadow: 0 6px 18px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.nombre,
+.mail,
+.mensaje{
+    font-family: 'Open Sans', sans-serif;
+    color: #7d7b7c
+}
+
+.mensaje{
+    width: 350px;
+    height: 150px;
+}
+
+.nombre{
+    width: 200px;
+    height: 20px;
+}
+
+.mail{
+    width: 250px;
+    height: 20px;
+}
+
+
