--- a/src/styles/TratamientosFaciales.module.css
+++ b/src/styles/TratamientosFaciales.module.css
@@ -47,3 +47,16 @@
     margin-top: 8px;
     color: #7A7A7A;
 }
+
+.reservar{
+    background: #D8C7B9;
+    height: 30px;
+    border: none;
+    padding: 12px;
+    border-radius: 10px;
+    font-size: 16px;
+    color: #7A7A7A;
+    box-shadow: 0 6px 18px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+    transition: 0.3s;
+}
