--- a/src/styles/ReservarOnline.module.css
+++ b/src/styles/ReservarOnline.module.css
@@ -7,3 +7,35 @@
     height: 15cm;
     width: 100%;
 }
+
+
+.form{
+    margin-top: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 2rem;
+}
+
+form {
+    width: 600px;
+    background-color: #fef9f5;
+    padding: 2rem;
+    border-radius: 10px;
+    box-shadow: 0px 4px 20px rgb(91, 90, 90);;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    padding: 40px;
+    flex-wrap: wrap;
+}
+
+input,
+select,
+textarea {
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 6px;
+    font-size: 16px;
+    background-color: #fff;
+}
