--- a/src/styles/Contacto.module.css
+++ b/src/styles/Contacto.module.css
@@ -1,5 +1,5 @@
 .titulo{
-    background-image: linear-gradient(rgba(246, 233, 217, 0.6), rgba(248, 230, 210, 0.6)), 
+    background-image: linear-gradient(rgba(246, 233, 217, 0.5), rgba(248, 230, 210, 0.5)),
     url('https://img.freepik.com/foto-gratis/concepto-spa-masaje-mujer_23-2147817020.jpg?uid=R195384068&ga=GA1.1.1117630890.1730399903&semt=ais_hybrid&w=740');
     background-position: center;
     background-repeat: no-repeat;
@@ -31,10 +31,10 @@
     border-radius: 5px;
 }
 
-.contacto2 .mail,
-.contacto2 .telefono,
-.contacto2 .direccion,
-.contacto2 .horario {
+.contacto .mail,
+.contacto .telefono,
+.contacto .direccion,
+.contacto .horario {
     display: flex;
     align-items: center;
     gap: 30px;
