--- a/src/index.css
+++ b/src/index.css
@@ -37,6 +37,8 @@ button {
   box-shadow: 0 6px 18px rgba(0, 0, 0, 0.1);
   cursor: pointer;
   transition: 0.3s;
+  margin: 25px auto; 
+  text-align: center;
 }
 
 h1, h2{
