--- a/src/styles/TratamientosFaciales.module.css
+++ b/src/styles/TratamientosFaciales.module.css
@@ -1,5 +1,5 @@
 .faciales {
-    background-image: linear-gradient(rgba(246, 233, 217, 0.6), rgba(248, 230, 210, 0.6)),
+    background-image: linear-gradient(rgba(246, 233, 217, 0.5), rgba(248, 230, 210, 0.5)),
     url('https://img.freepik.com/foto-gratis/mujer-joven-mascara-cara-relajante-salon-spa_176420-7497.jpg?uid=R195384068&ga=GA1.1.1117630890.1730399903&semt=ais_hybrid&w=740');
     background-position: center;
     background-repeat: no-repeat;
@@ -48,9 +48,10 @@
     color: #7A7A7A;
 }
 
-.reservar{
+.reserva,
+.boton{
     background: #D8C7B9;
-    height: 30px;
+    height: 25px;
     border: none;
     padding: 12px;
     border-radius: 10px;
