--- a/src/styles/NavBar.module.css
+++ b/src/styles/NavBar.module.css
@@ -89,3 +89,16 @@ h2{
     cursor: pointer;
     transition: 0.3s;
 }
+
+.login {
+    height: 500px;
+    display: flex;
+    justify-content: center;
+    margin: 0 0 0 15px;
+    padding:0;
+    width: 80%;
+    justify-content: center;
+    position: absolute;
+    left: 12%;
+    padding-top: 40px;
+}
