--- a/src/styles/NavBar.module.css
+++ b/src/styles/NavBar.module.css
@@ -1,15 +1,13 @@
-.navbar{
+.navbar {
     height: 500px;
     display: flex;
     justify-content: center;
     margin: 0;
-    padding:0;
+    padding: 0;
     width: 80%;
-    justify-content: center;
-    position: absolute;
+    position: absolute; /* <- Esto es lo que rompe el layout */
     padding-top: 40px;
-
-}
+}   
 
 h1{
     font-size: 75px;
@@ -41,19 +39,15 @@ h2{
     text-decoration: none;
 }
 
-.banner{
+.banner {
     position: relative;
-    overflow: hidden; /* Asegura que el texto no se desborde fuera del contenedor */
     background-color: #7A7A7A;
-    background-size: cover;
-    background-position: center;
-    background-attachment: fixed; /* Fija el fondo */
     height: 50px;
-    display: flex;
     width: 100%;
-    justify-content: center;
+    display: flex;
     align-items: center;
-
+    overflow: hidden;
+    z-index: 999;
 }
 
 @keyframes moveLeft {
@@ -65,16 +59,15 @@ h2{
     }
 }
 
-.banner1{
-    position: absolute;
-    white-space: nowrap; /* Evita que el texto se divida en varias líneas */
-    animation: moveLeft 35s linear infinite; /* La animación hace que el texto se mueva lentamente */
-    color:#F4F0EB;
-    font-size: 0.9rem;
-    font-family: 'Roboto', sans-serif;;
-    
-
+.banner1 {
+    white-space: nowrap;
+    animation: moveLeft 25s linear infinite;
+    color: #F4F0EB;
+    font-size: 1rem;
+    font-family: 'Roboto', sans-serif;
 }
+
+
 
 /*boton regala tova*/
 .regalaTova{
