--- a/src/styles/AcmellaOleracea.module.css
+++ b/src/styles/AcmellaOleracea.module.css
@@ -1,6 +1,6 @@
 .titulo{
     background-image: linear-gradient(rgba(246, 236, 224, 0.5), rgba(248, 230, 210, 0.5)),
-    url('https://img.freepik.com/foto-gratis/vista-superior-decoracion-spa-botellita_23-2148290962.jpg?uid=R195384068&ga=GA1.1.1117630890.1730399903&semt=ais_hybrid&w=740');
+    url('https://res.cloudinary.com/dljpuje5r/image/upload/v1744534377/vista-superior-decoracion-spa-botellita_23-2148290962.jpg_gojvvi.jpg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
