--- a/src/styles/Contacto.module.css
+++ b/src/styles/Contacto.module.css
@@ -1,6 +1,6 @@
 .titulo{
     background-image: linear-gradient(rgba(246, 233, 217, 0.5), rgba(248, 230, 210, 0.5)),
-    url('https://img.freepik.com/foto-gratis/concepto-spa-masaje-mujer_23-2147817020.jpg?uid=R195384068&ga=GA1.1.1117630890.1730399903&semt=ais_hybrid&w=740');
+    url('');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
