--- a/src/styles/Inicio.module.css
+++ b/src/styles/Inicio.module.css
@@ -1,5 +1,6 @@
 .inicio{
-    background-image: linear-gradient(rgba(246, 233, 217, 0.6), rgba(248, 230, 210, 0.6)), url('https://img.freepik.com/foto-gratis/vista-lujoso-espacio-interior-hotel_23-2150683409.jpg?t=st=1744323833~exp=1744327433~hmac=e62899914d104ea133a79eec55eed96c47229153bed6332a15e2821c00375af7&w=1380');
+    background-image: linear-gradient(rgba(246, 233, 217, 0.6), rgba(248, 230, 210, 0.6)),
+    url('https://res.cloudinary.com/dljpuje5r/image/upload/v1744535274/vista-lujoso-espacio-interior-hotel_23-2150683409.jpg_hznprr.jpg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
