--- a/src/styles/RegalaTova.module.css
+++ b/src/styles/RegalaTova.module.css
@@ -1,7 +1,7 @@
 /*parte superior imagen navbar*/
 .regala {
     background-image: linear-gradient(rgba(246, 233, 217, 0.5), rgba(248, 230, 210, 0.5)),
-    url('https://img.freepik.com/foto-gratis/flay-lay-regalo-bodas_23-2148480743.jpg?uid=R195384068&ga=GA1.1.1117630890.1730399903&semt=ais_hybrid&w=740');
+    url('https://res.cloudinary.com/dljpuje5r/image/upload/v1744534501/flay-lay-regalo-bodas_23-2148480743.jpg_mf0n3p.jpg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
