--- a/src/styles/TratamientosCorporales.module.css
+++ b/src/styles/TratamientosCorporales.module.css
@@ -1,6 +1,6 @@
 .corporales{
     background-image: linear-gradient(rgba(246, 233, 217, 0.5), rgba(248, 230, 210, 0.5)),
-    url('https://img.freepik.com/foto-gratis/concepto-spa-mujer-vista-cerca_23-2147816923.jpg?uid=R195384068&ga=GA1.1.1117630890.1730399903&semt=ais_hybrid&w=740');
+    url('https://res.cloudinary.com/dljpuje5r/image/upload/v1744534526/concepto-spa-mujer-vista-cerca_23-2147816923.jpg_seld8e.jpg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
