--- a/src/App.css
+++ b/src/App.css
@@ -58,3 +58,18 @@
 .react-datepicker__time-list-item[data-time="20:00"]  {
   display: block;
 }*/
+
+.react-datepicker__day-names {
+  position: relative;
+  top: 30px
+}
+
+.react-datepicker__header {
+  height: 60px;
+  padding: 0;
+}
+
+h2.react-datepicker__current-month {
+  position: absolute;
+  top: 20px;
+}
