--- a/src/styles/RegalaTova.module.css
+++ b/src/styles/RegalaTova.module.css
@@ -23,13 +23,14 @@
     align-items: center;
     justify-content: center;
     padding: 2rem;
+
 }
 
 /*hijo contenendor*/
 form {
     display: flex;
     flex-direction: column;
-    align-items: flex-start; /* Alinea todos los campos a la izquierda */
+    align-items: flex-start;
     background-color: #fef9f5;
     padding: 2rem;
     border-radius: 10px;
@@ -70,4 +71,34 @@ form {
     font-family: 'Playfair Display', serif;
 }
 
+.boton{
+    background: #D8C7B9;
+    border: none;
+    padding: 12px 28px;
+    border-radius: 10px;
+    font-size: 16px;
+    color: #7A7A7A;
+    font-family: 'Mulish', sans-serif;
+    box-shadow: 0 6px 18px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.contenedorBtn {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+
+.stripe{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    margin-top: 50px;
+    
+}
+
+.stripebuybutton{
+    border: 1px solid #ccc;
+}
 
