--- a/src/styles/NewService.module.css
+++ b/src/styles/NewService.module.css
@@ -8,19 +8,9 @@
     width: 100%;
 }
 
-.boton {
-    background-color: #7A7A7A;
-    color: #F4F0EB;
-    position: relative;
-    left: 155px;
-    width: 40px;
-    height: 40px;
-    padding: 0px;
-    margin: 0; 
-}
 
 /*contenedor form*/
-.form{
+.new{
     margin-top: 100px;
     display: flex;
     align-items: center;
@@ -34,10 +24,10 @@ form {
     flex-direction: column;
     align-items: flex-start; /* Alinea todos los campos a la izquierda */
     background-color: #fef9f5;
-    padding: 2rem;
+    padding:1rem;
     border-radius: 10px;
     box-shadow: 0px 4px 20px rgba(91, 90, 90, 0.2);
-    gap: 1.5rem;
+    gap: 1rem;
 }
 
 .img
@@ -49,7 +39,33 @@ form {
     justify-content: left;
     flex-direction: column;
     font-family: 'Open Sans', sans-serif;
-    color: #7d7b7c;
+    color: #918f90;
     width: 550px;
-    font-family: 'Open Sans', sans-serif;
+}
+
+
+.contenedorBtn {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+
+
+.boton{
+    background: #D8C7B9;
+    margin-top: 40px;
+    margin-bottom: 40px;
+    width: 220px;
+    height: 40px;
+    border: none;
+    padding: 12px;
+    border-radius: 10px;
+    font-size: 16px;
+    color: #7A7A7A;
+    box-shadow: 0 6px 18px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+    transition: 0.3s;
+    position: relative;
+    left: 155px;
+    padding: 0px;
 }
