--- a/src/styles/AcmellaOleracea.module.css
+++ b/src/styles/AcmellaOleracea.module.css
@@ -7,3 +7,49 @@
     height: 15cm;
     width: 100%;
 }
+
+/*botón reserva*/
+.boton{
+    background: #D8C7B9;
+    height: 30px;
+    border: none;
+    padding: 12px;
+    border-radius: 10px;
+    font-size: 16px;
+    color: #7A7A7A;
+    box-shadow: 0 6px 18px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+/*imagen antes y después*/
+.img{
+    display: flex;
+    width: 450px;
+    height: 520px;
+    align-items: center;
+    margin-bottom: 100px;
+}
+/*contenedor img y boton*/
+.contenedor{
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+/*todo el texto informativo*/
+.descripcion{
+    font-family: 'Open Sans', sans-serif;
+    color: #7d7b7c;
+    text-align: justify;
+    font-size: 20px;
+}
+
+.subtitulo{
+    font-family: 'Playfair Display', serif;
+    color: #7d7b7c;
+    font-size: 35px;
+    font-weight: bold;
+}
