--- a/src/styles/Appointments.module.css
+++ b/src/styles/Appointments.module.css
@@ -10,3 +10,10 @@
     align-items: center;
     justify-content: center;
 }
+/*contenedor calendario*/
+.contenedor{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 50px;
+}
