--- a/src/styles/Logout.module.css
+++ b/src/styles/Logout.module.css
@@ -1,11 +1,19 @@
-.button {
+/*contenedor logout*/
+.buttonlogout {
     position: relative;
     left: 170px;
     top: 7px;
-    width: 60px;
+    width: 50px;
     height: 40px;
     padding: 0px;
     margin: 0;
-    text-align: center;
-    
+    text-align: center; 
+    background-color: transparent;
+    box-shadow: none;  
 }
+
+/*icono logout*/
+.icon{
+    font-size: 50px
+}
+
