--- a/src/styles/NavBar.module.css
+++ b/src/styles/NavBar.module.css
@@ -126,4 +126,21 @@ h2{
     margin-right: 50px;
 }
 
+.citasreservadas{
+    background: #ecdfcc;
+    height: 30px;
+    width: 160px;
+    border: none;
+    padding: 12px;
+    border-radius: 10px;
+    font-size: 16px;
+    color: #7A7A7A;
+    box-shadow: 0 6px 18px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+    transition: 0.3s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 
