--- a/src/styles/NewButton.module.css
+++ b/src/styles/NewButton.module.css
@@ -1,4 +1,4 @@
-.button {
+.newbutton {
     background-color: #7A7A7A;
     color: #F4F0EB;
     position: relative;
@@ -6,5 +6,13 @@
     width: 40px;
     height: 40px;
     padding: 0px;
-    margin: 0;
+}
+
+.icon{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 35px;
+    color: #f1e4d4;
+    
 }
