--- a/src/styles/Appointments.module.css
+++ b/src/styles/Appointments.module.css
@@ -10,3 +10,30 @@
     align-items: center;
     justify-content: center;
 }
+
+.calendar, .dates{
+    display: flex;
+    justify-content: center;
+}
+
+.calendar {
+    margin-top: 30px;
+}
+
+.dates li{
+    background-color: #fef9f5; 
+    width: 300px; 
+    height: 150px; 
+    border-radius: 10px; 
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+    padding: 8px;
+    display: flex;
+    flex-direction:column; 
+    align-items: center;
+    text-align: center; 
+}
+
+.dates li p, .dates li h3 {
+    margin: 5px;
+}
+
