--- a/src/styles/AcmellaOleracea.module.css
+++ b/src/styles/AcmellaOleracea.module.css
@@ -6,6 +6,8 @@
     background-size: cover;
     height: 15cm;
     width: 100%;
+    display: flex;
+    align-items: center;
 }
 
 /*botón reserva*/
