--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,6 @@
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
-  /*text-align: center;*/
 }
 
 .logo {
@@ -11,53 +10,10 @@
   will-change: filter;
   transition: filter 300ms;
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
 
 .card {
   padding: 2em;
 }
-
-
-
-
-/* Ocultar horas fuera del rango 10:00-14:00 y 16:00-20:00 
-.react-datepicker__time-list-item[data-time="14:00"],
-.react-datepicker__time-list-item[data-time="15:00"]{
-  display: none;
-}
-
-.react-datepicker__time-list-item[data-time="10:00"],
-.react-datepicker__time-list-item[data-time="11:00"],
-.react-datepicker__time-list-item[data-time="12:00"],
-.react-datepicker__time-list-item[data-time="13:00"],
-.react-datepicker__time-list-item[data-time="14:00"],
-.react-datepicker__time-list-item[data-time="16:00"],
-.react-datepicker__time-list-item[data-time="17:00"],
-.react-datepicker__time-list-item[data-time="18:00"],
-.react-datepicker__time-list-item[data-time="19:00"]
-.react-datepicker__time-list-item[data-time="20:00"]  {
-  display: block;
-}*/
 
 .react-datepicker__day-names {
   position: relative;
@@ -79,9 +35,12 @@ h2.react-datepicker__current-month {
 }
 
 .react-datepicker__day--holidays {
-  background-color: #7c5665;
+  color: rgb(198, 195, 195);
+  background-color: transparent;
 }
 
 .react-datepicker__day--highlighted {
-  background-color: #f3c3c3;
+  background-color: #f1c489;
+  color: white;
+  font-weight: bold;
 }
