--- a/src/styles/Calendar.module.css
+++ b/src/styles/Calendar.module.css
@@ -3,3 +3,12 @@
     border-radius: 20px;
     color: #7d7b7c;
 }
+
+.customCalendar {
+    font-family: 'Arial', sans-serif;
+    background-color:  #f7e8da;;
+    border: 1px solid  #D8C7B9;;
+    border-radius: 10px;
+    padding: 10px;
+}
+
