--- a/src/styles/NewService.module.css
+++ b/src/styles/NewService.module.css
@@ -11,11 +11,11 @@
 
 /*contenedor form*/
 .new{
-    margin-top: 100px;
+    position: relative;
+    top: 100px;
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 2rem;
 }
 
 /*hijo contenendor*/
@@ -24,7 +24,7 @@ form {
     flex-direction: column;
     align-items: flex-start; /* Alinea todos los campos a la izquierda */
     background-color: #fef9f5;
-    padding:1rem;
+    padding:3rem;
     border-radius: 10px;
     box-shadow: 0px 4px 20px rgba(91, 90, 90, 0.2);
     gap: 1rem;
@@ -53,12 +53,12 @@ form {
 
 .boton{
     background: #D8C7B9;
-    margin-top: 40px;
-    margin-bottom: 40px;
+    margin-top: 20px;
+    margin-bottom: 30px;
     width: 220px;
     height: 40px;
     border: none;
-    padding: 12px;
+    padding: 0px;
     border-radius: 10px;
     font-size: 16px;
     color: #7A7A7A;
@@ -66,6 +66,10 @@ form {
     cursor: pointer;
     transition: 0.3s;
     position: relative;
-    left: 155px;
-    padding: 0px;
+    left: 145px;
+}
+
+.message {
+    position: absolute;
+    bottom: 20px;
 }
