--- a/src/styles/AcmellaOleracea.module.css
+++ b/src/styles/AcmellaOleracea.module.css
@@ -40,6 +40,9 @@
     justify-content: center;
     margin-top: 30px;
     margin-bottom: 30px;
+    @media (max-width: 1024px) {
+        margin-bottom: 10px;
+      }
 }
 /*todo el texto informativo*/
 .descripcion{
@@ -47,6 +50,9 @@
     color: #7d7b7c;
     text-align: justify;
     font-size: 20px;
+    @media (max-width: 1024px) {
+        font-size: 1.1rem;
+      }
 }
 
 .subtitulo{
@@ -54,4 +60,9 @@
     color: #7d7b7c;
     font-size: 35px;
     font-weight: bold;
+    @media (max-width: 1024px) {
+        font-size: 2rem;
+        margin-bottom: 10px;
+        padding: 10px;
+      }
 }
