--- a/src/styles/Contacto.module.css
+++ b/src/styles/Contacto.module.css
@@ -29,6 +29,15 @@
     margin-top: 50px;
     box-shadow: 0 4px 20px rgba(0,0,0,0.1);
     border-radius: 5px;
+    
+}
+
+.googleMap {
+    width: 600px;
+    @media (max-width: 1024px) {
+        display: flex;
+        width: 400px;
+      }
 }
 
 .contacto .mail,
