--- a/src/styles/Inicio.module.css
+++ b/src/styles/Inicio.module.css
@@ -20,6 +20,10 @@
     margin-top: 50px;
     margin-bottom: 1.5rem;
     text-align: justify;
+    @media (max-width: 1024px) {
+        font-size: 1.2rem;
+        margin-top: 20px;
+      }
 }
 
 .subtitulo {
@@ -29,6 +33,9 @@
     color: #7d7b7c;
     font-weight: 600;
     margin-top: 80px;
+    @media (max-width: 1024px) {
+        font-size: 1.4rem;
+      }
 }
 
 .link{
@@ -57,6 +64,9 @@
     align-items: center;
     justify-content: center;
     margin-top: 150px;
+    @media (max-width: 1024px) {
+        margin-top: 50px;
+      }
 }
 
 .clase{
@@ -82,28 +92,43 @@
     justify-content: center;
     gap: 80px;
     text-align: justify;
+    @media (max-width: 1024px) {
+        gap: 40px;
+      }
 }
 .imgsobremi{
     height: 650px; 
     width: 550px;
+    
 }
 
 .carta{
     font-family: 'Parisienne', cursive;
     font-size: 25px;
+    @media (max-width: 1024px) {
+        font-size: 1.4rem;
+      }
 }
 
 .pregunta{
     font-family: 'Parisienne', cursive;
     font-size: 60px;
-    margin-left: 130px;
+    text-align: center;
     margin-top: 200px;
     font-weight: bold;
+    @media (max-width: 1024px) {
+        font-size: 2.5rem;
+        text-align: center;
+        margin-top: 100px;
+      }
 }
 
 .saludo{
     font-family: 'Parisienne', cursive;
     font-size: 45px;
+    @media (max-width: 1024px) {
+        font-size: 2rem;
+      }
 }
 
 
