--- a/src/styles/Estrias.module.css
+++ b/src/styles/Estrias.module.css
@@ -38,9 +38,6 @@
     justify-content: center;
     margin-top: 30px;
     margin-bottom: 30px;
-    @media (max-width: 1024px) {
-        margin-bottom: 10px;
-      }
 }
 /*todo el texto informativo*/
 .descripcion{
@@ -48,9 +45,6 @@
     color: #7d7b7c;
     text-align: justify;
     font-size: 20px;
-    @media (max-width: 1024px) {
-        font-size: 1.1rem;
-      }
 }
 
 .subtitulo{
@@ -58,8 +52,19 @@
     color: #7d7b7c;
     font-size: 35px;
     font-weight: bold;
-    @media (max-width: 1024px) {
+}
+
+@media (max-width: 1024px) {
+    .contenedor {
+        margin-bottom: 10px;
+    }
+
+    .descripcion {
+        font-size: 1.1rem;
+    }
+
+    .subtitulo {
         font-size: 2rem;
         margin-bottom: 10px;
-      }
+    }
 }
